@@ -1,3 +1,5 @@
+- add urpm::check_cache_dir() for mgaonline (mga#6083)
+
 Version 7.7 - 5 September 2012
 
 - use xz instead of lzma in order to read metadata
